<resources>

    <!-- Resources that do not require translation -->
    <string name="app_name">OfficeGym</string>

    <!-- Translatable resources -->
    <string name="total_duration">total duration: %d</string>
    <string name="mean_intensity">mean intensity: %d</string>
    <string name="intensity">intensity: %d</string>
    <string name="duration">duration: %d</string>
    <string name="title_intensity">intensity</string>
    <string name="title_duration">duration</string>
    <string name="title_recommended_duration">recommended duration</string>
    <string name="data">%d</string>
    <string name="time">%s</string>
    <string name="recommended_duration">recommended duration: %d</string>
    <string name="simple_intensity">intensity:</string>
    <string name="simple_duration">duration:</string>
    <string name="simple_recommended_duration">recommended duration:</string>
    <string name="description">description:</string>
    <string name="profile_image">Profile image</string>
    <string name="profile_name">Name</string>
    <string name="profile_year">Birth year</string>
    <string name="profile_gender">Gender</string>
    <string name="title_home">Home</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_exercise">Exercise</string>
    <string name="title_exercise_name">Exercise name</string>
    <string name="title_description">description</string>
    <string name="title_workout">Workout</string>
    <string name="title_edit_all_workouts">Edit workouts</string>
    <string name="title_edit_all_exercises">Edit exercises</string>
    <string name="choose_exercise">Choose exercise</string>
    <string name="title_music">Music</string>
    <string name="title_information">Information</string>
    <string name="title_profile">Profile</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_statistics">Statistics</string>
    <string name="alarm_text">This is alarm fragment.</string>
    <string name="statistics_text">This is statistics fragment.</string>
    <string name="title_start_workout_fragment">Start workout</string>
    <string name="save_button_text">save</string>
    <string name="cancel_button_text">cancel</string>
    <string name="delete_button_text">delete</string>
    <string name="workout_name_hint">Workout name</string>
    <string name="alarm_name_hint">Alarm name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_workout_fragment">Start workout</string>
    <string name="start">Start!</string>
    <string name="title_run_workout">RunWorkoutFragment</string>
    <string name="next">Next</string>
    <string name="exercise_image">Exercise image</string>
    <string name="next_exercise">NextExercise</string>
</resources>
