...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/image"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/exercise_name"
                style="@style/NormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_weight="1"
                android:text="@{exercise.name}"
                tools:text="Exercise" />

            <TextView
                android:id="@+id/exercise_duration"
                style="@style/SmallTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
...
