<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_icon"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_alarm"
        android:icon="@drawable/ic_alarm_icon"
        android:title="@string/title_alarm" />

    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_statistics_icon"
        android:title="@string/title_statistics" />

</menu>
