...
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/mute_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/next_exercise"
                android:src="@drawable/ic_mute_icon" />

...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/next_exercise"
                android:src="@{isPaused ? @drawable/ic_play_icon : @drawable/ic_pause_icon}" />

            <ImageButton
                android:id="@+id/next_exercise_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/next_exercise"
                android:src="@drawable/ic_next_icon" />
        </LinearLayout>
...
